[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yayaya"
version = "0.1.1"
description = "Centralized YAML config loader with ease"
authors = [
    { name="Karel Matějovský" }
]
dependencies = ["pyyaml"]

[tool.setuptools]
packages = ["yayaya"]
