[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yayaya"
version = "0.3.0"
description = "Centralized YAML config loader with ease"
readme = "README.md"
authors = [
    { name="Karel Matějovský" }
]
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["yayaya"]
